--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,9 @@ jobs:
           fi
 
       - name: Build and test with Make
-        run: make
+        run: /
+          make ci-build output_dir="${{ runner.os }}"
+          make coverage
 
       - name: Run "integration tests"
         run: |
@@ -47,7 +49,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: false
-          artifacts: "bin/federator"
+          artifacts: ${{ format('bin/{0}/federator', runner.os) }}
           body: ${{ format('Built from {0} on {1}', github.sha, runner.os) }}
           commit: ${{ github.sha }}
           draft: true
