fixed syntax error in the github actions file

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
           fi
 
       - name: Build and test with Make
-        run: /
+        run: |
           make ci-build output_dir="${{ runner.os }}"
           make coverage
 
