--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Get dependencies
         run: |
           go get -v -t -d ./...
-          go get go-acc
+          go get github.com/ory/go-acc
 
       - name: Build and test with Make
         run: |
