--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,13 +29,13 @@ jobs:
 
       - name: Build and test with Make
         run: |
-          make ci-build output_dir="${{ runner.os }}"
+          make ci-build platform="${{ runner.os }}"
           make test
 
       - name: Run "integration tests"
         run: |
-          ./bin/${{ runner.os }}/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
-          ./bin/${{ runner.os }}/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -45,7 +45,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: false
-          artifacts: ${{ format('bin/{0}/federator', runner.os) }}
+          artifacts: ${{ format('bin/federator-{0}', runner.os) }}
           body: ${{ format('Built from {0}', github.sha) }}
           commit: ${{ github.sha }}
           draft: true
