--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,8 @@ jobs:
         run: |
           ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
           ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator-${{ runner.os }} --help
+          ./bin/federator-${{ runner.os }} --version
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
