--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,9 @@ jobs:
       - name: Run "integration tests"
         run: |
           ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
           ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
           ./bin/federator-${{ runner.os }} --help
           ./bin/federator-${{ runner.os }} --version
         env:
