--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -45,8 +45,11 @@ jobs:
           tag: ${{ github.sha }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Compress artifacts
+        run: tar -cvf ${{ format('bin/federator-{0}-{1].tar', runner.os, matrix.golang) }} ${{ format('bin/federator-{0}', runner.os) }}
+
       - name: Upload artifacts for follow up
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ format('federator-{0}', runner.os) }}
-          path: ${{ format('bin/federator-{0}', runner.os) }}
+          name: ${{ format('federator-{0}-{1]', runner.os, matrix.golang) }}
+          path: ${{ format('bin/federator-{0}-{1].tar', runner.os, matrix.golang) }}
