--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -24,24 +24,27 @@ jobs:
         with:
           workflow: build_binary.yml
           workflow_conclusion: success
-          name: ${{ format('federator-{0}', runner.os) }}
+          name: ${{ format('federator-{0}-{1}', runner.os, matrix.golang) }}
           path: bin/
           repo: ${{github.repository}}
 
+      - name: Rename the binary
+        run: mv ${{ format('bin/federator-{0}-{1}', runner.os, matrix.golang) }} bin/federator
+
       - name: Run "functional tests"
         run: |
-          ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
-          ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
-          ./bin/federator-${{ runner.os }} link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
-          ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
-          ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
-          ./bin/federator-${{ runner.os }} creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
-          ./bin/federator-${{ runner.os }} trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id"
-          ./bin/federator-${{ runner.os }} trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id" --json
-          ./bin/federator-${{ runner.os }} trust-policy --account-id 000000000000 --external-id "test external id"
-          ./bin/federator-${{ runner.os }} trust-policy --account-id 000000000000 --external-id "test external id" --json
-          ./bin/federator-${{ runner.os }} --help
-          ./bin/federator-${{ runner.os }} --version
+          ./bin/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
+          ./bin/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
+          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
+          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
+          ./bin/federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id"
+          ./bin/federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id" --json
+          ./bin/federator trust-policy --account-id 000000000000 --external-id "test external id"
+          ./bin/federator trust-policy --account-id 000000000000 --external-id "test external id" --json
+          ./bin/federator --help
+          ./bin/federator --version
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
