--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -51,5 +51,5 @@ jobs:
       - name: Upload artifacts for follow up
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ format('federator-{0}-{1]', runner.os, matrix.golang) }}
-          path: ${{ format('bin/federator-{0}-{1].tar', runner.os, matrix.golang) }}
+          name: ${{ format('federator-{0}-{1}', runner.os, matrix.golang) }}
+          path: ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.golang) }}
