--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -32,7 +32,7 @@ jobs:
         run: tar -xvf ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.golang) }}
 
       - name: Rename the binary
-        run: mv ${{ format('bin/federator-{0}-{1}', runner.os, matrix.golang) }} bin/federator
+        run: mv ${{ format('bin/federator-{0}', runner.os) }} bin/federator
 
       - name: Run "functional tests"
         run: |
