--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -10,6 +10,7 @@ jobs:
   functional_tests:
     name: Draft a Github release
     runs-on: ${{ matrix.os }}
+    if: ${{ github.actor != 'dependabot[bot]' }}
 
     strategy:
       matrix:
