forgot to add a conditional to only run on Windows

--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -35,6 +35,7 @@ jobs:
           mv ${{ format('bin/federator-{0}', runner.os) }} bin/federator
 
       - name: What files are within the tree, Windows?
+        if: runner.os == 'Windows'
         run: Tree bin /F
 
       - name: Run "functional tests"
