--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -33,25 +33,22 @@ jobs:
         run: |
           tar -xvf ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.golang) }}
           mv ${{ format('bin/federator-{0}', runner.os) }} bin/federator
-
-      - name: What files are within the tree, Windows?
-        if: runner.os == 'Windows'
-        run: Tree bin /F
+          cd bin
 
       - name: Run "functional tests"
         run: |
-          ./bin/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
-          ./bin/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
-          ./bin/federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
-          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
-          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
-          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
-          ./bin/federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id"
-          ./bin/federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id" --json
-          ./bin/federator trust-policy --account-id 000000000000 --external-id "test external id"
-          ./bin/federator trust-policy --account-id 000000000000 --external-id "test external id" --json
-          ./bin/federator --help
-          ./bin/federator --version
+          federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
+          federator link --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
+          federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
+          federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
+          federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
+          federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id"
+          federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id" --json
+          federator trust-policy --account-id 000000000000 --external-id "test external id"
+          federator trust-policy --account-id 000000000000 --external-id "test external id" --json
+          federator --help
+          federator --version
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
