--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Figure out binary path (thanks windows)
         if: runner.os == 'Windows'
-        run: echo "binary_path=\".\\bin\\federator\"" >> $GITHUB_ENV
+        run: echo "binary_path=`".\bin\federator`"" >> $GITHUB_ENV
 
       - name: Run "functional tests"
         run: |
