--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         golang: [1.16, 1.17]
 
       fail-fast: true
