--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -42,6 +42,7 @@ jobs:
           ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }}
           ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --region $ANOTHER_AWS_REGION
           ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --json
+          ./bin/federator creds --role-arn ${{ secrets.ASSUME_ROLE_ARN }} --awscli
           ./bin/federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id"
           ./bin/federator trust-policy --arn arn:aws:iam::000000000000:user/myUser --external-id "test external id" --json
           ./bin/federator trust-policy --account-id 000000000000 --external-id "test external id"
