--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        golang: [1.16, 1.17]
+        golang: [1.17, 1.18, 1.19]
 
       fail-fast: true
 
