--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        golang: [1.18, 1.19, 1.20]
+        golang: ['1.18.x', '1.19.x', '1.20.x']
 
       fail-fast: true
 
