--- a/.github/workflows/functional_tests.yml
+++ b/.github/workflows/functional_tests.yml
@@ -14,8 +14,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        golang: ['1.18.x', '1.19.x', '1.20.x']
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        golang: ['1.19.x', '1.20.x']
 
       fail-fast: true
 
