--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -11,11 +11,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         golang: ['1.19.x', '1.20.x']
+        arch: ['amd64', 'arm64']
 
       fail-fast: true
 
     steps:
-      - name: Set up Go 1.16
+      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.golang }}
@@ -30,11 +31,11 @@ jobs:
 
       - name: Build and test with Make
         run: |
-          make ci-build platform="${{ runner.os }}"
+          make ci-build platform="${{ runner.os }}" arch="${{ runner.arch }}"
           make test
 
       - name: Tar the artifacts
-        run: tar -cvf ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.golang) }} ${{ format('bin/federator-{0}', runner.os) }}
+        run: tar -cvf ${{ format('bin/federator-{0}-{1}-{2}.tar', runner.os, runner.arch, matrix.golang) }} ${{ format('bin/federator-{0}-{1}', runner.os, runner.arch) }}
 
       - name: Upload artifacts for the functional tests workflow
         uses: actions/upload-artifact@v3
