--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           workflow: functional_tests.yml
           workflow_conclusion: success
-          name: ${{ format('federator-{0}-{1}-{2}', runner.os, runner.arch, matrix.golang) }}
+          name: ${{ format('federator-{0}-{1}-{2}', runner.os, matrix.arch, matrix.golang) }}
           path: bin/
           repo: ${{github.repository}}
 
@@ -34,7 +34,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          artifacts: ${{ format('bin/federator-{0}-{1}-{2}', runner.os, runner.arch, matrix.golang) }}
+          artifacts: ${{ format('bin/federator-{0}-{1}-{2}', runner.os, matrix.arch, matrix.golang) }}
           body: ${{ format('Built from {0}', github.sha) }}
           commit: ${{ github.sha }}
           draft: true
