--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -40,5 +40,5 @@ jobs:
       - name: Upload artifacts for the functional tests workflow
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ format('federator-{0}-{1}', runner.os, matrix.golang) }}
-          path: ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.golang) }}
+          name: ${{ format('federator-{0}-{1}-{2}', runner.os, matrix.arch, matrix.golang) }}
+          path: ${{ format('bin/federator-{0}-{1}-{2}.tar', runner.os, matrix.arch, matrix.golang) }}
