--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -20,8 +20,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ matrix.golang }}
-          cache: true
-          cache-dependency-path: go.sum
+          cache: false
 
         id: go
 
