--- a/.github/workflows/build_binary.yml
+++ b/.github/workflows/build_binary.yml
@@ -2,6 +2,9 @@ name: Build binary
 
 on: [push, pull_request]
 
+env:
+  GOLANG_VERSION: '1.20.x'
+
 jobs:
   make_build:
     name: Build
@@ -10,7 +13,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        golang: ['1.19.x', '1.20.x']
         arch: ['amd64', 'arm64']
 
       fail-fast: true
@@ -19,7 +21,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ matrix.golang }}
+          go-version: ${{ env.GOLANG_VERSION }}
           cache: false
 
         id: go
@@ -37,10 +39,10 @@ jobs:
           make test
 
       - name: Tar the artifacts
-        run: tar -cvf ${{ format('bin/federator-{0}-{1}-{2}.tar', runner.os, matrix.arch, matrix.golang) }} ${{ format('bin/federator-{0}-{1}', runner.os, matrix.arch) }}
+        run: tar -cvf ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.arch) }} ${{ format('bin/federator-{0}-{1}', runner.os, matrix.arch) }}
 
       - name: Upload artifacts for the functional tests workflow
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ format('federator-{0}-{1}-{2}', runner.os, matrix.arch, matrix.golang) }}
-          path: ${{ format('bin/federator-{0}-{1}-{2}.tar', runner.os, matrix.arch, matrix.golang) }}
+          name: ${{ format('federator-{0}-{1}', runner.os, matrix.arch) }}
+          path: ${{ format('bin/federator-{0}-{1}.tar', runner.os, matrix.arch) }}
