--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -6,6 +6,9 @@ on:
     types:
       - completed
 
+env:
+  GOLANG_VERSION: '1.20.x'
+
 jobs:
   functional_tests:
     name: Draft a Github release
@@ -15,7 +18,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        golang: ['1.19.x', '1.20.x']
         arch: ['amd64', 'arm64']
 
       fail-fast: true
@@ -26,7 +28,7 @@ jobs:
         with:
           workflow: functional_tests.yml
           workflow_conclusion: success
-          name: ${{ format('federator-{0}-{1}-{2}', runner.os, matrix.arch, matrix.golang) }}
+          name: ${{ format('federator-{0}-{1}', runner.os, matrix.arch) }}
           path: bin/
           repo: ${{github.repository}}
 
@@ -34,7 +36,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           allowUpdates: true
-          artifacts: ${{ format('bin/federator-{0}-{1}-{2}', runner.os, matrix.arch, matrix.golang) }}
+          artifacts: ${{ format('bin/federator-{0}-{1}', runner.os, matrix.arch) }}
           body: ${{ format('Built from {0}', github.sha) }}
           commit: ${{ github.sha }}
           draft: true
